--- a/public/css/style.css
+++ b/public/css/style.css
@@ -462,7 +462,7 @@ header .intro-text {
 /* Contact Section */
 #contact {
   padding: 100px 0 60px;
-  background: linear-gradient(to right, #45A1BA 0%, #5ca9fb 100%);
+  background: linear-gradient(to right, #45A1BA 0%, #45A1BA 100%);
   color: rgba(255, 255, 255, 0.75);
 }
 #contact .section-title {
