--- a/public/css/style.css
+++ b/public/css/style.css
@@ -73,6 +73,7 @@ hr {
 .group-photos img {
     display: block;
     width: 100%;
+    height: 255px;
 }
 /* Navigation */
 #menu {
@@ -215,7 +216,7 @@ a:focus,
   display: table;
   width: 100%;
   padding: 0;
-  background: url(../img/bibliaFundo.jpeg) center center no-repeat;
+  background: url(../img/igreja.jpeg) center center no-repeat;
   background-color: #e5e5e5;
   -webkit-background-size: cover;
   -moz-background-size: cover;
